@@ -232,6 +232,14 @@ static VALUE rb_tinytds_return_code(VALUE self) {
   }
 }
 
+static VALUE rb_tinytds_freetds_nine_one_or_higher(VALUE self) {
+  #ifdef DBSETLDBNAME
+    return Qtrue;
+  #else
+    return Qfalse;
+  #endif
+}
+
 
 // TinyTds::Client (protected) 
 
@@ -313,6 +321,7 @@ void init_tinytds_client() {
   rb_define_method(cTinyTdsClient, "encoding", rb_tinytds_encoding, 0);
   rb_define_method(cTinyTdsClient, "escape", rb_tinytds_escape, 1);
   rb_define_method(cTinyTdsClient, "return_code", rb_tinytds_return_code, 0);
+  rb_define_method(cTinyTdsClient, "freetds_091_or_higer?", rb_tinytds_freetds_nine_one_or_higher, 0);
   /* Define TinyTds::Client Protected Methods */
   rb_define_protected_method(cTinyTdsClient, "connect", rb_tinytds_connect, 1);
   /* Symbols For Connect */
