@@ -1,6 +1,8 @@
 
 * 0.5.0 *
 
+* Add test for 0.91 and higher to handle incorrect syntax in sp_executesql.
+
 * Returning empty result sets with a command batch that has multiple statements is now the default. Use :empty_sets => false to override.
 
 * Do not raise a TinyTds::Error with our message handler unless the severity is greater than 10.
